--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "better-sqlite3": "^5.4.0",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
+    "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
+    "mongoose": "^5.4.6",
     "morgan": "^1.9.1",
     "mustache-express": "^1.2.8",
     "sql.js": "^0.5.0"
