--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jasmine",
     "watch": "nodemon --ext js,html,css server.js",
     "start": "node server.js"
   },
@@ -19,9 +19,11 @@
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
+    "jasmine": "^3.3.1",
     "mongoose": "^5.4.6",
     "morgan": "^1.9.1",
     "mustache-express": "^1.2.8",
+    "request": "^2.88.0",
     "sql.js": "^0.5.0"
   },
   "devDependencies": {
