--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
     "jasmine": "^3.3.1",
+    "jasmine-core": "^3.3.0",
     "mongoose": "^5.4.6",
     "morgan": "^1.9.1",
     "mustache-express": "^1.2.8",
