--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jasmine",
     "watch": "nodemon --ext js,html,css server.js",
     "start": "node server.js"
   },
@@ -13,19 +12,14 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "better-sqlite3": "^5.4.0",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
-    "jasmine": "^3.3.1",
-    "jasmine-core": "^3.3.0",
     "mongoose": "^5.4.6",
     "morgan": "^1.9.1",
-    "mustache-express": "^1.2.8",
-    "request": "^2.88.0",
-    "sql.js": "^0.5.0"
+    "mustache-express": "^1.2.8"
   },
   "devDependencies": {
     "nodemon": "^1.18.9"
